<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharactersActivity"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_guideline"
        app:layout_constraintGuide_percent=".25"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/right_guideline"
        app:layout_constraintGuide_percent=".75"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_guideline"
        app:layout_constraintGuide_percent=".0"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_guideline"
        app:layout_constraintGuide_percent="1"
        android:orientation="horizontal"/>



    <Button
        android:id="@+id/btnElves"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintVertical_weight="1"
        android:layout_gravity="center"
        android:background="@color/colorButton"
        android:textColor="@color/colorButtonText"
        app:layout_constraintTop_toTopOf="@id/top_guideline"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintBottom_toBottomOf="@id/btnDwarves"
        android:text="@string/btnElvesText"
        />

    <Button
        android:id="@+id/btnDwarves"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintVertical_weight="1"
        android:layout_gravity="center"
        android:background="@color/colorButton"
        android:textColor="@color/colorButtonText"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/btnElves"
        app:layout_constraintBottom_toBottomOf="@id/btnMaiar"
        android:text="@string/btnDwarvesText"
        />

    <Button
        android:id="@+id/btnMaiar"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintVertical_weight="1"
        android:layout_gravity="center"
        android:background="@color/colorButton"
        android:textColor="@color/colorButtonText"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/btnDwarves"
        app:layout_constraintBottom_toBottomOf="@id/btnHobbits"
        android:text="@string/btnMaiarText"
        />

    <Button
        android:id="@+id/btnHobbits"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintVertical_weight="1"
        android:layout_gravity="center"
        android:background="@color/colorButton"
        android:textColor="@color/colorButtonText"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/btnMaiar"
        app:layout_constraintBottom_toBottomOf="@id/btnMen"
        android:text="@string/btnHobbitsText"/>


    <Button
        android:id="@+id/btnMen"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintVertical_weight="1"
        android:layout_gravity="center"
        android:background="@color/colorButton"
        android:textColor="@color/colorButtonText"
        app:layout_constraintTop_toTopOf="@id/btnHobbits"
        app:layout_constraintBottom_toBottomOf="@id/btnOrcs"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        android:text="@string/btnMenText"
        />

    <Button
        android:id="@+id/btnOrcs"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintVertical_weight="1"
        android:layout_gravity="center"
        android:background="@color/colorButton"
        android:textColor="@color/colorButtonText"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/btnMen"
        app:layout_constraintBottom_toBottomOf="@id/btnEnts"
        android:text="@string/btnOrcsText"
        />

    <Button
        android:id="@+id/btnEnts"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintVertical_weight="1"
        android:layout_gravity="center"
        android:background="@color/colorButton"
        android:textColor="@color/colorButtonText"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/btnOrcs"
        app:layout_constraintBottom_toBottomOf="@id/btnOthers"
        android:text="@string/btnEntsText"
        />

    <Button
        android:id="@+id/btnOthers"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintVertical_weight="1"
        android:layout_gravity="center"
        android:background="@color/colorButton"
        android:textColor="@color/colorButtonText"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/btnEnts"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        android:text="@string/btnOthersText"
        />



</androidx.constraintlayout.widget.ConstraintLayout>